// Instruction transfer API description
// Used to generate Android gRPC classes 

syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.proto";
option java_outer_classname = "InstructionProto";
option objc_class_prefix = "INST";

package instruction;

// Empty message as rpc requires to have input
message AllInstructioinsRequest
{

}

// Array of instruction thumbnails
message AllInstructioinsResponse
{
	repeated InstructionThumbnail thumbnails = 1;
}

// Instruction Thumbnail metadata and image as byte array
message InstructionThumbnail
{
	string id = 1;
	string name = 2;
	string description = 3;
	bytes image = 4; 
	uint32 step_count = 5;
	uint32 size = 6;
}

message InstructionRequest
{
	string id = 1;
}

// Array of Slides
message InstructionResponse
{
	int32 status = 1;
	repeated Slide slides = 2;
}

message Slide
{
	string text = 1;
	string transform = 2;
	uint32 media_type = 3;
	string media_url = 4;
}

// Chunks for big files requests
message Chunk 
{
  bytes buffer = 1;
}

message MediaRequest 
{
  string id = 1;
}

service Instruction
{
	// Request thumbnails to all available instructions
	rpc GetAllInstructions(AllInstructioinsRequest) returns (AllInstructioinsResponse) {}
	// Request instruction by id
	rpc GetInstruction(InstructionRequest) returns (InstructionResponse) {}
	// Request media folder in zip format
	rpc DownloadMedia(MediaRequest) returns (stream Chunk) {}
}